<?xml version="1.0"?>
<package format="3">
  <name>md</name>
  <version>0.0.0</version>
  <description>The md package</description>
  <maintainer email="motordriver@nate.com">md</maintainer>
  <license>GPL</license>
  <author>MDROBOT</author>

  <!-- Dependencies for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>